--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "clean-build:watch": "rm -rf build/* && tsc --watch",
         "test": "nyc mocha --opts ./src/test/mocha.opts",
         "test:watch": "nyc mocha --watch --opts ./src/test/mocha.opts",
-        "api-docs": "typedoc --options typedoc.json --out docs/api ./src/index.ts ./src/lib/dataframe.ts ./src/lib/series.ts ./src/lib/index.ts",
+        "api-docs": "typedoc --options typedoc.json --out docs/api ./src/index.ts",
         "prepublishOnly": "build.bat",
         "coveralls": "nyc report --reporter=text-lcov | coveralls"
     },
@@ -28,7 +28,7 @@
     },
     "homepage": "https://github.com/data-forge/data-forge-fs#readme",
     "dependencies": {
-        "chai": "^4.1.2"        
+        "chai": "^4.1.2"
     },
     "peerDependencies": {
         "data-forge-beta": "^1.3.0"
@@ -42,6 +42,7 @@
         "mock-require": "^3.0.2",
         "nyc": "^13.0.1",
         "ts-node": "3.3.0",
+        "typedoc": "^0.12.0",
         "typescript": "2.5.2"
     },
     "nyc": {
