--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "build:watch": "tsc --watch",
         "clean-build:watch": "rm -rf build/* && tsc --watch",
         "t": "npm run test",
-        "test": "nyc mocha --opts ./src/test/mocha.opts",
+        "test": "mocha --opts ./src/test/mocha.opts",
         "tw": "npm run test:watch",
         "test:watch": "nyc mocha --watch --opts ./src/test/mocha.opts",
         "api-docs": "typedoc --options typedoc.json --out docs/api ./src/index.ts",
